# rust-bots

./: .gitignore  Cargo.toml
assets/texture/: bot_sprite.ron  bot_sprite.xcf
resources/: display_config.ron
src/: bot.rs  graph.rs  main.rs  state.rs  world.rs
src/component/: colour.rs  mod.rs  pose.rs
src/components/: mod.rs  size.rs  velocity.rs
src/system/: mod.rs  update_pose.rs
src/systems/: mod.rs  movement.rs  scale_system.rs
