[package]
name = "rust-bots"
version = "0.1.0"
authors = ["Ponder Stibbons Club"]
edition = "2018"

[dependencies]
rand = "0.7.0"
amethyst = { git = "https://github.com/amethyst/amethyst.git", rev = "b610ebf6ce9e8da88519bb5225d14ed9842cfc16" }
nalgebra = "0.18.0"

[features]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
